# Aurora

./: .gitmodules  CMakeLists.txt  README.md  build.jam
Aurora/: build.jam  container  math  memory  pattern  utility
Aurora/constants/: build.jam
Aurora/logging/: build.jam  serial_sink.cpp  serial_sink.hpp  serial_sink_config.hpp
Aurora/memory/: build.jam
Aurora/memory/flash/littlefs/: lfs_hooks.hpp
Aurora/memory/generic/: generic_intf.hpp  generic_types.hpp  generic_utils.hpp
Aurora/memory/heap/: build.jam  heap.cpp  heap.hpp
Aurora/memory/virtual/: build.jam  chimera_memory_device.cpp  device.hpp
Aurora/mth/: build.jam  conversion.hpp  math.cpp  math.hpp
Aurora/src/container/: circular_buffer.hpp
Aurora/src/memory/: CMakeLists.txt
Aurora/src/memory/flash/littlefs/: CMakeLists.txt  lfs_hooks.cpp  lfs_hooks.hpp
Aurora/src/memory/generic/: CMakeLists.txt  generic_inc.hpp  generic_intf.hpp  generic_types.hpp  generic_utils.cpp  generic_utils.hpp
Aurora/structure/: build.jam
Aurora/structure/obs/: build.jam  observable.cpp  observable.hpp
Aurora/units/: units.hpp
Aurora/utilities/: build.jam  utility_common.cpp  utility_common.hpp
include/Aurora/: constants  container  database  datastore  datastruct  filesystem  filesystem_lfs  filesystem_spiffs  filesystem_yaffs  hmi  logging  math  memory  pattern  sensors  tracing  units  utility  version.hpp
lib/: README.md  build.jam
lib/cobs/: CMakeLists.txt
lib/embedded_template_library/: CMakeLists.txt
lib/fatfs/: CMakeLists.txt
lib/littlefs/: CMakeLists.txt
lib/nanopb/: CMakeLists.txt
lib/yaffs/: yaffs_osglue.cpp
source/constants/: common.hpp  physics.hpp
source/container/: CMakeLists.txt  circular_buffer.hpp  list.hpp  mpmc_queue.hpp  stream_buffer.cpp  stream_buffer.hpp
source/database/: CMakeLists.txt  database_config.hpp  database_driver.cpp  database_intf.hpp  database_types.hpp  db_shared_types.hpp  readme.md
source/database/persistent/: db_nvm_driver.hpp  db_nvm_types.hpp
source/database/volatile/: database_config.hpp  database_driver.cpp  database_intf.hpp  database_types.hpp
source/datastore/: CMakeLists.txt  datastore_driver.cpp  datastore_driver.hpp  datastore_intf.hpp  datastore_macro.hpp  datastore_types.hpp  readme.md
source/datastruct/: CMakeLists.txt  intrusive_struct.cpp  intrusive_struct.hpp
source/filesystem/: CMakeLists.txt  file_binary.cpp  file_binary.hpp  file_config.hpp  file_driver.hpp  file_intf.cpp  file_intf.hpp  file_types.hpp
source/filesystem/eeprom/: fs_eeprom_driver.cpp  fs_eeprom_driver.hpp  fs_eeprom_posix.cpp  fs_eeprom_types.cpp  fs_eeprom_types.hpp
source/filesystem/fatfs/: fatfs_driver.cpp  fatfs_driver.hpp
source/filesystem/generic/: generic_driver.cpp  generic_driver.hpp
source/filesystem/littlefs/: lfs_driver.cpp  lfs_driver.hpp  lfs_hooks.hpp  lfs_tests.hpp
source/filesystem/spiffs/: spiffs_driver.cpp  spiffs_driver.hpp  spiffs_posix.cpp
source/filesystem/yaffs/: yaffs2_driver.cpp  yaffs2_driver.hpp
source/hmi/: CMakeLists.txt
source/hmi/button/: CMakeLists.txt  hmi_button_driver.cpp  hmi_button_driver.hpp  hmi_button_types.hpp
source/hmi/rotary_encoder/: CMakeLists.txt  hmi_rotary_encoder_driver.cpp  hmi_rotary_encoder_driver.hpp  hmi_rotatry_encoder_types.hpp
source/hmi/shift_register/: CMakeLists.txt  hmi_sr_input.cpp  hmi_sr_input.hpp
source/hmi/sr/: hmi_sr_input.cpp  hmi_sr_input.hpp
source/logging/: CMakeLists.txt  logging_config.hpp  logging_driver.cpp  logging_driver.hpp  logging_macro.hpp  logging_nanoprintf.c  logging_types.hpp  serial_sink.cpp  serial_sink.hpp  serial_sink_config.hpp
source/logging/sinks/: sink_cout.cpp  sink_cout.hpp  sink_file.cpp  sink_file.hpp  sink_intf.hpp  sink_jlink.cpp  sink_jlink.hpp  sink_serial.cpp  sink_serial.hpp  sink_serial_config.hpp  sink_vgdb_semihosting.cpp  sink_vgdb_semihosting.hpp
source/math/: CMakeLists.txt  conversion.cpp  conversion.hpp  math.cpp  math.hpp  math_constexpr.hpp
source/memory/: CMakeLists.txt  shared_ptr.hpp
source/memory/flash/: CMakeLists.txt  device_test.cpp  device_test.hpp
source/memory/flash/eeprom/: CMakeLists.txt  eeprom_devices.hpp  eeprom_generic_driver.cpp  eeprom_generic_driver.hpp  eeprom_generic_types.hpp
source/memory/flash/jedec/: jedec_cfi_cmds.hpp
source/memory/flash/littlefs/: CMakeLists.txt  lfs_hooks.cpp  lfs_hooks.hpp
source/memory/flash/nor/: CMakeLists.txt  nor_generic_driver.cpp  nor_generic_driver.hpp  nor_generic_types.hpp
source/memory/flash/nor/manufacturer/: nor_adesto.cpp  nor_adesto.hpp
source/memory/flash/sd/: CMakeLists.txt  sd_generic_driver.cpp  sd_generic_driver.hpp  sd_generic_types.hpp
source/memory/generic/: CMakeLists.txt  generic_inc.hpp  generic_intf.hpp  generic_types.hpp  generic_utils.cpp  generic_utils.hpp
source/memory/heap/: CMakeLists.txt  heap.cpp  heap.hpp  heap_intf.hpp
source/sensors/: accel_intf.hpp  gyro_intf.hpp  mag_intf.hpp  sensor_intf.hpp  sensor_types.hpp
source/structure/: observer
source/structure/obs/: observer_intf.hpp  types.hpp
source/tracing/: CMakeLists.txt  segger_tracing.hpp
source/units/: units.hpp
source/util/: CMakeLists.txt  enum.hpp  strings.cpp  strings.hpp  timing.cpp  timing.hpp  utility_common.hpp
vs/AuroraStaticLibrary/: AuroraStaticLibrary.sln
vs/AuroraStaticLibrary/AuroraStaticLibrary/: AuroraConfiguration.props  AuroraStaticLibrary.vcxproj  AuroraStaticLibrary.vcxproj.filters
vs/AuroraStaticLibraryEmbedded/: AuroraStaticLibraryEmbedded.sln
vs/AuroraStaticLibraryEmbedded/AuroraStaticLibraryEmbedded/: AuroraStaticLibraryEmbedded-STM32F446RE-Debug.vgdbsettings  AuroraStaticLibraryEmbedded-STM32L432KB-Debug.vgdbsettings  AuroraStaticLibraryEmbedded-STM32L432KB-Release.vgdbsettings  AuroraStaticLibraryEmbedded-STM32L432KC-Debug.vgdbsettings  AuroraStaticLibraryEmbedded.vcxproj  AuroraStaticLibraryEmbedded.vcxproj.filters  stm32.xml
vs/LittleFSStaticLibrary/: LittleFSStaticLibrary.sln
vs/LittleFSStaticLibrary/LittleFSStaticLibrary/: LittleFSStaticLibrary.vcxproj  LittleFSStaticLibrary.vcxproj.filters
(+4 files in other folders)
